--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -26,7 +26,7 @@
         position: relative;
         overflow: hidden;
         &::before {
-          background-image: url('../assets/img/mekong_padot_1.jpg');
+          background-image: url('../assets/img/mekong_kartta_1.jpg');
           background-position: 50% 50%;
           background-repeat: no-repeat;
           background-size: auto 100%;
@@ -40,12 +40,12 @@
         }
         &.page1 {
           &::before {
-            background-image: url('../assets/img/mekong_padot_paauoma.jpg');
+            background-image: url('../assets/img/mekong_kartta_2.jpg');
           }
         }
         &.page2 {
           &::before {
-            background-image: url('../assets/img/mekong_padot_paauoma.jpg');
+            background-image: url('../assets/img/mekong_kartta_5.jpg');
             background-position: 50% 0;
             height: 200%;
             margin-left: -50%;
@@ -55,7 +55,7 @@
         }
         &.page3 {
           &::before {
-            background-image: url('../assets/img/mekong_padot_paauoma.jpg');
+            background-image: url('../assets/img/mekong_kartta_6.jpg');
             background-position: 50% 0;
             height: 200%;
             margin-left: calc(100vw - 165vw);
@@ -65,24 +65,28 @@
         }
         &.page4 {
           &::before {
-            background-image: url('../assets/img/mekong_padot_paauoma.jpg');
+            background-image: url('../assets/img/mekong_kartta_3.jpg');
             background-position: 50% 0;
             height: 250%;
             margin-left: calc(100vw - 190vw);
-            margin-top: calc(100vh - 175vh);
+            margin-top: calc(100vh - 200vh);
             width: 250%;
           }
         }
-        &.page5,
+        &.page5 {
+          &::before {
+            background-image: url('../assets/img/mekong_kartta_6.jpg');
+          }
+        }
         &.page6 {
           &::before {
-            background-image: url('../assets/img/mekong_padot_paauoma.jpg');
+            background-image: url('../assets/img/mekong_kartta_7.jpg');
           }
         }
         &.page7,
         &.page8 {
           &::before {
-            background-image: url('../assets/img/mekong_padot_sivujoet-min.jpg');
+            background-image: url('../assets/img/mekong_kartta_11.jpg');
           }
         }
       }
