--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -16,7 +16,7 @@
     padding: 5px;
   }
   .map_container {
-    margin: 20px auto -135px auto;
+    margin: 20px auto 20px auto;
     overflow: hidden;
     .map_texts_container {
       position: relative;
@@ -41,32 +41,38 @@
           height: 100vh;
           position: fixed;
         }
+        &.page0 {
+          background-image: url('https://lusi-dataviz.ylestatic.fi/2023-05-mekong/assets/img/mekong_kartta_1.jpg');
+        }
         &.page1 {
           background-image: url('https://lusi-dataviz.ylestatic.fi/2023-05-mekong/assets/img/mekong_kartta_2.jpg');
         }
         &.page2 {
           background-image: url('https://lusi-dataviz.ylestatic.fi/2023-05-mekong/assets/img/mekong_kartta_5.jpg');
-          background-position: 50% 0;
-          height: 200%;
-          margin-left: -50%;
-          margin-top: -10%;
-          width: 200%;
+          @media all and (min-width: 600px) {
+            height: 200%;
+            margin-left: -50%;
+            margin-top: -10%;
+            width: 200%;
+          }
         }
         &.page3 {
           background-image: url('https://lusi-dataviz.ylestatic.fi/2023-05-mekong/assets/img/mekong_kartta_6.jpg');
-          background-position: 50% 0;
-          height: 200%;
-          margin-left: calc(100vw - 165vw);
-          margin-top: calc(100vh - 200vh);
-          width: 200%;
+          @media all and (min-width: 600px) {
+            height: 200%;
+            margin-left: calc(100vw - 165vw);
+            margin-top: calc(100vh - 200vh);
+            width: 200%;
+          }
         }
         &.page4 {
           background-image: url('https://lusi-dataviz.ylestatic.fi/2023-05-mekong/assets/img/mekong_kartta_12.jpg');
-          background-position: 50% 0;
-          height: 250%;
-          margin-left: calc(100vw - 190vw);
-          margin-top: calc(100vh - 200vh);
-          width: 250%;
+          @media all and (min-width: 600px) {
+            height: 250%;
+            margin-left: calc(100vw - 190vw);
+            margin-top: calc(100vh - 200vh);
+            width: 250%;
+          }
         }
         &.page5 {
           background-image: url('https://lusi-dataviz.ylestatic.fi/2023-05-mekong/assets/img/mekong_kartta_6.jpg');
@@ -82,15 +88,18 @@
       .map_text_container {
         align-items: center;
         display: flex;
-        overflow: hidden;
-        justify-content: center;
         height: 150vh;
+        justify-content: center;
+        overflow: hidden;
         position: relative;
         vertical-align: middle;
         width: 100%;
         z-index: 2;
         &.map_text_container_0 {
           height: 75vh;
+        }
+        &.map_text_container_8 {
+          height: 100vh;
         }
         .text {
           background-color: rgba(255, 255, 255, 0.9);
